Fix for tables breaking layouts on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -567,6 +567,9 @@ a:hover {
 .btn.btn-mini {
   padding: 2px 6px;
 }
+.entry-content {
+  overflow-x: scroll;
+}
 .donate-btn a:hover {
   color: #fff;
 }
