--- a/less/common.less
+++ b/less/common.less
@@ -70,6 +70,10 @@ a {
     padding: 2px 6px;
   }
 }
+// prevent tables from breaking layouts
+.entry-content {
+  overflow-x: scroll;
+}
 .donate-btn a:hover {
   color: #fff;
 }
